# amalthea

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: test.yml
amalthea/gateware/: demod.py  device.py  fft.py  fixed_point.py  interactive-test.py  radio.py  stream.py  test_fft.py  types.py  util.py  wishbone_example.py
amalthea/gateware/test/: fft_test.py
amalthea/gateware/types/: complex.py  fixed_point.py  test_complex.py  test_fixed_point.py
amalthea/gnuradio/: amalthea_demod.block.yml  amaltheasource.block.yml  amaltheasource.py  hybridsdr.domain.yml  wishbone.domain.yml  wishbone_counter.block.yml
amalthea/gnuradio/example/: hybridsdr.grc  hybridsdr_wb.grc
docs/: conf.py  getting_started.rst  index.rst  intro.rst
gateware/: amalthea_r0_1.py  amalthea_r0_1_26MHz.py  demod.py  device.py  fmdemod.py  interactive-test.py  radio.py  receiver.py  stream.py  util.py
gnuradio/: amalthea_device.block.yml  amalthea_rx.block.yml  amaltheasource.block.yml  amaltheasource.py  hybridsdr.domain.yml
gnuradio/example/: hybridsdr.grc
hardware/: .gitignore
hardware/libraries/: rf.lib  support_hardware.lib
hardware/libraries/amalthea.pretty/: Filter_Johanson_2x1.25mm.kicad_mod
hardware/rev0/: amalthea_rev0-cache.lib  amalthea_rev0.kicad_pcb  amalthea_rev0.pro  amalthea_rev0.sch  debug_control_connections.sch  fp-lib-table  fpga_configuration.sch  host_side.sch  power_supplies.sch  ram_section.sch  right_side_indicators.sch  sideband_side.sch  sym-lib-table  target_side.sch
tests/: test_complex.py  test_fft.py  test_fixed_point.py
(+13 files in other folders)
