[tool.poetry]
name = "amalthea"
version = "0.1.0-dev.0"
description = "amalthea"
authors = ["Mike Walters <mike@flomp.net>"]
license = "BSD"

[tool.poetry.dependencies]
python = "^3.7"
numpy = [
    {version = "^1", python = ">=3.7,<3.8"},
    {version = "^1.24", python = ">=3.8"}
]
luna = {git = "https://github.com/greatscottgadgets/luna.git", branch = "main"}
amaranth = {git = "https://github.com/amaranth-lang/amaranth.git", branch = "main"}


[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
